# obafgkm

./: .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  __init__.py  main.py  plot.py  pyproject.toml  rcparams.txt  star_types.csv  teff_3000.0_logg_0.0_mh_-2.0.txt  user_prompt.py
codeastro_files/: teff_3000.0_logg_1.0_mh_0.0.txt  teff_3000.0_logg_1.0_mh_0.5.txt  teff_3000.0_logg_2.0_mh_-2.0.txt  teff_3000.0_logg_2.0_mh_0.0.txt  teff_3000.0_logg_3.0_mh_0.0.txt  teff_4000.0_logg_2.0_mh_-2.0.txt  teff_4000.0_logg_2.0_mh_0.5.txt  teff_4000.0_logg_3.0_mh_-2.0.txt  teff_4000.0_logg_4.0_mh_-2.0.txt  teff_4000.0_logg_5.0_mh_0.0.txt  teff_5000.0_logg_0.0_mh_-2.0.txt  teff_5000.0_logg_0.0_mh_0.0.txt  teff_5000.0_logg_1.0_mh_-2.0.txt  teff_5000.0_logg_2.0_mh_0.5.txt  teff_5000.0_logg_3.0_mh_0.0.txt  teff_5000.0_logg_4.0_mh_0.0.txt  teff_6000.0_logg_0.0_mh_0.0.txt  teff_6000.0_logg_0.0_mh_0.5.txt  teff_6000.0_logg_1.0_mh_-2.0.txt  teff_6000.0_logg_2.0_mh_0.0.txt  teff_6000.0_logg_3.0_mh_0.0.txt  teff_6000.0_logg_4.0_mh_0.0.txt  teff_6000.0_logg_4.0_mh_0.5.txt  teff_7000.0_logg_2.0_mh_0.0.txt  teff_7000.0_logg_3.0_mh_0.5.txt  teff_7000.0_logg_4.0_mh_-2.0.txt  teff_7000.0_logg_5.0_mh_-2.0.txt  teff_8000.0_logg_0.0_mh_0.0.txt  teff_8000.0_logg_1.0_mh_-2.0.txt  teff_8000.0_logg_1.0_mh_0.5.txt  teff_8000.0_logg_2.0_mh_0.0.txt  teff_8000.0_logg_2.0_mh_0.5.txt  teff_8000.0_logg_5.0_mh_-2.0.txt  teff_8000.0_logg_5.0_mh_0.5.txt
codeastro_files_raw/: teff_3000.0_logg_1.0_mh_0.5.txt  teff_3000.0_logg_3.0_mh_-2.0.txt  teff_3000.0_logg_4.0_mh_-2.0.txt  (+15 more)
obafgkm/: __init__.py  (+6 more)
(+178 files in other folders)
