[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obafgkm"
version = "0.0.1"

dependencies = [
"numpy",
"pandas",
"astropy",
"matplotlib"
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml,
# so you do NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]