[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obafgkm"
dynamic = ["version"]

dependencies = [
"numpy",
"pandas",
"astropy",
"matplotlib",
"pytest",
"sphinx-rtd-theme==3.0.2"
]

[tool.setuptools.dynamic]
version = {attr = "obafgkm.__version__"}

[tool.setuptools.packages]
find = {}
